force-app/main/default/objects/Give_API_Token__mdt/Give_API_Token__mdt.object-meta.xml
<CustomObject>
    <description>Give API tokens used by custom integration to authenticate to the GiveWP API.</description>
    <label>Give API Token</label>
    <pluralLabel>Give API Tokens</pluralLabel>
</CustomObject>