force-app/main/default/objects/Give_API_Token__mdt/fields/Donation_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Donation_Prefix__c</fullName>
    <label>Donation Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>