force-app/main/default/objects/Give_API_Token__mdt/fields/Individual_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_Account_ID__c</fullName>
    <label>Individual Account ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>