force-app/main/default/objects/Give_API_Token__mdt/fields/Organizational_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Organizational_Account_ID__c</fullName>
    <label>Organizational Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>