force-app/main/default/objects/Give_API_Token__mdt/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>