force-app/main/default/objects/Give_API_Token__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>